Copied over cleanups